welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: Boolean does not take parameters
    positionFinale=positionFinale()
                                 ^SnakeBuggle:17: error: not found: value EST
    if (getDirection()==EST) 
                        ^SnakeBuggle:35: error: not found: value EST
    if (getDirection()==EST) 
                        ^